add revokenode endpoint
